<resources>
    <string name="app_name">Si Hura Hura</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="masukkan_password">Masukkan password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem Ipsum Dolor Sit Amet</string>
</resources>