<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Register.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            app:title="Register"
            app:titleTextColor="#000000" />


        <cz.ackee.ui.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_login"
            android:layout_marginTop="60dp"
            android:hint="Masukkan username"
            android:textColorHint="#B3BDCB"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#4890F0"
            app:hintEnabled="true"
            app:hintPaddingTop="12dp"
            app:hintTextAppearance="@style/TextAppearance.Design.Hint"
            app:hintTextColor="#4890F0"
            app:prefixTextColor="@color/black"
            tools:ignore="HardcodedText">

            <cz.ackee.ui.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar_login"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawablePadding="10dp"
                android:paddingTop="32dp"
                android:paddingBottom="20dp"
                tools:ignore="Autofill,SpeakableTextPresentCheck">


            </cz.ackee.ui.textfield.TextInputEditText>

        </cz.ackee.ui.textfield.TextInputLayout>


        <cz.ackee.ui.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout1"
            android:layout_marginTop="24dp"
            android:hint="@string/masukkan_email"
            android:textColorHint="#B3BDCB"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#4890F0"
            app:hintEnabled="true"
            app:hintPaddingTop="12dp"
            app:hintTextAppearance="@style/TextAppearance.Design.Hint"
            app:hintTextColor="#4890F0"
            app:prefixTextColor="@color/black"
            tools:ignore="HardcodedText">

            <cz.ackee.ui.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:paddingTop="32dp"
                android:paddingBottom="20dp"
                tools:ignore="Autofill,SpeakableTextPresentCheck">


            </cz.ackee.ui.textfield.TextInputEditText>

        </cz.ackee.ui.textfield.TextInputLayout>

        <cz.ackee.ui.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout2"
            android:layout_marginTop="24dp"
            android:hint="@string/masukkan_password"
            android:textColorHint="#B3BDCB"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#4890F0"
            app:hintEnabled="true"
            app:hintPaddingTop="12dp"
            app:hintTextAppearance="@style/TextAppearance.Design.Hint"
            app:hintTextColor="#4890F0"
            app:prefixTextColor="@color/black"
            tools:ignore="HardcodedText">


            <cz.ackee.ui.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="20dp"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:paddingTop="32dp"
                android:paddingBottom="20dp"
                tools:ignore="Autofill,SpeakableTextPresentCheck" />
        </cz.ackee.ui.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/textInputLayout3"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="#00008b"
            android:enabled="true"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/signup_button"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="#FFFFFF"
            android:enabled="true"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#00008b"
            android:textSize="20sp" />

    </RelativeLayout>

</ScrollView>